--- a/AUTHORS
+++ b/AUTHORS
@@ -1,7 +1,7 @@
 # This file lists all individuals having contributed content to the repository.
 
 
-Jennifer Huang <133@holbertonschool.com>
-Alexa Orrico <210@holbertonschool.com>
-Joann Vuong <130@holbertonschool.com>
+Brennan D Baraban <375@holbertonschool.com>
+Derrick Gee <499@holbertonschool.com>
 Oluwaseyi Akinbobola <82047@holbertonschool.com>
+
