--- a/AUTHORS
+++ b/AUTHORS
@@ -4,4 +4,5 @@
 Brennan D Baraban <375@holbertonschool.com>
 Derrick Gee <499@holbertonschool.com>
 Oluwaseyi Akinbobola <82047@holbertonschool.com>
+Nwafor Ugochukwu Emmanuel <nwaforugochukwu21@gmail.com>
 
